# sd_rust

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
src/: audio.rs  config.rs  device.rs  keys.rs  launch.rs  main.rs  obs.rs  osd.rs  prompt.rs  render.rs  runtime.rs  screensaver.rs  service.rs  state.rs  suspend.rs  udev.rs  widgets.rs
udev/: 70-sd_rust.rules
