[package]
name = "sd_rust"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
elgato-streamdeck = "0.13"
env_logger = "0.11"
evdev = "0.13"
freedesktop-icons = "0.4"
image = "0.25"
libc = "0.2"
libpulse-binding = "2"
log = "0.4"
obws = { version = "0.14", features = ["events"] }
resvg = "0.47.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "net", "io-util", "process"] }
tokio-stream = "0.1"
toml = "0.9"
zbus = { version = "5", default-features = false, features = ["async-io", "blocking-api"] }
